# conference-backend-test

./: .gitignore  Dockerfile  README.md  example.env  pyproject.toml  testing.env
alembic/: env.py
alembic/versions/: 98e2abe56d46_create_tables.py
backend/: add_values.py  main.py  models.py  schemas.py
tests/: test_main.py
